src/main/webapp/css/main.css
html {
    background: #fefefe
}

body {
    margin: 0;
    background: #fefefe;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif
}

* {
    margin: 0;
    padding: 0;
    max-width: 1200px;
}

a {
    text-decoration: none;
}

img {
    border: 0
}

#head ul li {
    list-style: none;
}

#head {
    min-width: 1000px;
    width: 100%;
    float: left;
    background: url(/css/images/main/headBg.png) repeat-x
}

.head_height {
    z-index: 10;
    height: 310px
}

.head_pad {
    z-index: 10;
    padding-bottom: 30px
}

#head_cen {
    min-width: 1200px;
    width: 100%;
    margin: 0 auto
}

#head_sup {
    min-width: 1200px;
    width: 100%;
    float: left;
    position: relative;
}

#head div.inputs span {
    width: auto;
    margin: 2px 15px 10px 0;
    float: left;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 12px;
    font-weight: bolder;
    text-indent: 10px;
    color: #ffffff;
    text-transform: uppercase;
    display: inline;
}

#head div.inputs {
    padding: 9px 10px 0px 10px;
    width: auto;
    float: right;
}

#head div.inputs input.txt {
    width: 135px;
    height: 21px;
    margin: 0 10px 0 10px;
    padding: 0 0 0 10px;
    float: left;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 14px;
    color: #818181;
    border: 0;
    background: url(/css/images/main/searchbg.png) no-repeat
}

#head div.inputs input.btn {
    width: 68px;
    height: 21px;
    float: left;
    border: 0;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: #ffffff;
    text-align: center;
    text-transform: uppercase;
    cursor: pointer;
    font-weight: bolder;
    background: url(/css/images/main/searchbtn.png) no-repeat
}

#head p.search input.btn:active {
    background-position: 2px 2px
}

h1.logo {
    z-index: 10;
    width: 256px;
    height: 128px;
    margin-top: 112px;
    float: left;
}

h1.logo a {
    width: 100%;
    height: 100%;
    float: left;
    text-indent: -9999px
}

#head {
    position: relative;
}

#head ul {
    height: 44px;
    float: left;
    margin: 5px 0 0 30px;
}

#head ul li {
    width: auto;
    margin-left: 1px;
    float: left;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 13px;
    color: #5f5f5f;
    line-height: 35px;
    text-transform: uppercase;
}

#head ul li:first-child {
    margin: 0
}

#head ul li	a, #head ul li a.active {
    width: auto;
    height: 42px;
    padding: 0 23px;
    float: left;
    color: inherit;
}

#head ul li	a:hover, #head ul li a.active {
    color: #31a1ff;
}

#menu {
    position: relative;
    z-index: 20;
    margin: 0px 0 0 50px;
}

#menu ul {
    width: 1200px;
    height: 44px;
    float: left;
    margin: 10px 0 0 0;
}

#menu ul li {
    list-style: none;
    width: auto;
    margin-left: 1px;
    float: left;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 13px;
    color: #5f5f5f;
    line-height: 35px;
    text-transform: uppercase
}

#menu ul li:first-child {
    margin: 0
}

#menu ul li	a, #menu ul li a.active {
    width: auto;
    height: 42px;
    padding: 0 23px;
    float: left;
    color: inherit;
}

#menu ul li	a:hover, #menu ul li a.active {
    color: #31a1ff;
}

#content {
    text-align: left;
    min-width: 1000px;
    max-width: 1170px;
    width: 100%;
    padding: 0 0 0 36px;
    margin-bottom: 20px;
    float: left;
    background: #ffffff url(/css/images/main/contentBg.png) repeat-x
}

#content_cen {
    width: 100%;
    margin: 0 auto
}

#content_sup {
    width: 100%;
    float: left;
    position: relative
}

#ct_pan {
    width: 100%;
    text-decoration: none;
    height: 32px;
    padding: 10px 10px 10px 10px;
    margin-top: 10px;
    float: left;
    position: relative;
    background: #B2CBFF
}

#ct_pan p {
    width: 312px;
    margin: 34px 52px 0 0;
    float: left
}

#ct_pan p a {
    color: #31a1ff;
    text-transform: uppercase
}

#ct_pan ul {
    width: 195px;
    margin-top: 26px;
    float: left
}

#ct_pan ul li {
    width: 100%;
    float: left
}

#ct_pan ul li a {
    display: inline;
    color: inherit;
    line-height: 20px
}

#ct_pan ul li a:hover {
    color: #2277DD;
}

#welcom_pan {
    position: static;
    margin: 95px 0 0 725px;
    padding: 55px 20px 0px 20px;
    height: 235px;
}

#welcom_pan p {
    margin: 5px 0 0 14px;
    padding: 0px 10px 2px 10px;
    text-indent: 10px;
    float: left;
    font-size: 10px;
    color: #4d4d4d;
    line-height: 14px;
}

#welcom_pan	iframe {
    margin: 37px 0 0 14px;
    float: left;
    border-bottom: #c9c9c9 solid 1px;
    background: url(/css/images/main/crosslines.png) no-repeat right 8px
}

#welcom_pan a.enlarg {
    width: auto;
    margin: 15px 0 0 14px;
    float: left;
    color: #848484
}

#welcom_pan h3 {
    clear: left
}

#foot {
    width: 100%;
    height: 50px;
    float: left;
    background: url(/css/images/main/footBg.png) repeat-x
}

#foot_cen {
    width: 100%;
    margin: 0 auto 0 20px;
}

#foot p {
    width: 100%;
    margin-top: 10px;
    float: left;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 14px;
    color: #767676;
    line-height: 18px;
    text-align: center
}

#foot p	a {
    color: inherit
}

#service_pan {
    width: 100%;
    margin-top: 20px;
    float: left
}

#service_pan ul {
    width: 100%;
    float: left
}

#service_pan ul li {
    width: 325px;
    height: 100px;
    margin: 0 30px;
    float: left;
    border-bottom: #c9c9c9 solid 1px
}

/*#service_pan ul li:first-child				{border:0}
*/
#service_pan ul li:hover {
    background: #fbfbfb
}

#service_pan ul li h5 {
    width: auto;
    margin: 10px 0 0 10px;
    float: left;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
    color: #31a1ff
}

#service_pan ul li p {
    width: 300px;
    margin: 5px 0 0 10px;
    float: left;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: #5c5c5c
}

#service_pan ul li p a {
    width: auto;
    float: right;
    color: #31a1ff
}

.view {
    min-height: 260px;
    min-width: 960px;
    width: 100%;
}

#portrait {
    height: 250px;
    width: 200px;
    position: absolute;
    top: 31px;
    left: 0px;
    padding: 0 10px 10px 0px;
    margin: 34px -200px 0 30px;
}

#galleria-main {
    height: 400px;
    width: 708px;
    position: absolute;
    top: 32px;
    margin: 10px 0 0 20px;
    background-color: #fefefe;
    opacity: 0.8;
    filter: alpha(opacity = 80); /* For IE8 and earlier */
}

#galleria-main div.galleria-thumbnails-container {
    display: none !important;
}

#galleria {
    margin-top: 10px;
    padding: 10px 10px 10px 10px;
    height: 500px;
    width: 860px;
}

.view-right-place {
    margin-top: 10px;
    margin-right: 10px;
    background: #fbfbfb;
    min-height: 600px;
    width: 860px;
    float: right;
    border-radius: 5%;
}

.view-center-place a {
    color: #7cbff3;
    margin-left: 20px;
    padding-bottom: 20px;
}

.view-center-place {
    padding: 20px 20px 20px 20px;
    margin-top: 10px;
    margin-left: 20px;
    background: #fbfbfb;
    min-height: 600px;
    width: 90%;
    float: left;
    border-radius: 5%;
}

.view-center-place span {
    margin-bottom: 10px;
    text-align: center;
    color: #4d4d4d;
    opacity: 0.5;
    font-size: 16px;
    font-family: "Trebuchet MS" Arial, Helvetica sans-serif;
}

.view-center-place .results {
    width: 90%;
    margin-left: 10%;
}

.left-place {
    text-align: center;
    background: #f6f9fb url("/css/images/main/pat.png") repeat;
    margin: 10px 10px 10px 10px;
    min-height: 600px;
    width: 270px;
    float: left;
}

.feed-name a {
    color: #7cbff3;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 14px;
    word-spacing: 2px;
    text-transform: uppercase;
    font-weight: bold;
}

.feed-name {
    padding: 10px;
    opacity: 0.9;
}

.feed-name.active {
    border-left: 10px solid #7cbff3;
    background-color: #dedede;
    opacity: 0.9;
    padding-left: -10px;
    cursor: pointer;
}

.feed-name.active a,
.feed-name:hover a {
    color: #7cbff3;
}

.feed-name:hover {
    border-left: 10px solid #7cbff3;
    cursor: pointer;
    opacity: 0.6;
    background-color: #dedede;
    padding-left: -10px;
}

#add-article {
    float: right;
    display: inline;
}

.album-view {
    background-color: #b4b8d1;
    opacity: 0.9;
    max-width: 270px;
    color: #818181;
}

.album-view div.title {
    text-transform: uppercase;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 14px;
    color: #363636;
    margin: 10px;
}

.album-view div.description {
    margin: 10px;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: #363636;
}

.login {
    color: #ffffff;
}

.login ul {
    position: absolute;
    top: 0;
    left: 0;
    margin: 0 10px 21px 10px;
}

.login ul li span {
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 12px;
    font-weight: bolder;
    text-indent: 10px;
    color: #ffffff;
}

.login ul li a {
    color: #ffffff;
    padding: 0 5px 2px 5px;
    display: inline;
    opacity: 0.9;
}

.login ul li a>img {
    height: 32px;
    width: 32px;
    margin: 2px;
}

#personal {
    position: absolute;
    top: 42px;
    right: 0;
    width: 100%;
    max-width: 472px;
    margin-bottom: 20px;
}

#personal div.name {
    margin-top: -65px;
    padding: 10px 10px 10px 10px;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 26px;
    opacity: 0.7;
    font-weight: bolder;
}

#personal div.sub-label {
    color: #31a1ff;
    float: right;
    font-size: 10px;
    right: 0;
    margin: -20px 90px 0 0;
}

#personal div.separator {
    border-bottom: 1px solid #444444;
    opacity: 0.5;
    margin-top: 10px;
    width: 60%;
    margin-left: 20%;
    margin-bottom: 10px;
}

#personal-not-main {
    background-color: #f6f9fb;
    float: left;
    width: 100%;
    border-bottom: 1px solid #7CBFF3;
}

#personal-not-main div.name {
    float: right;
    padding: 10px;
    color: #767676;
    font-size: 25px;
    font-family: "Trebuchet MS" Arial, Helvetica sans-serif;
}

#personal-not-main div.sub-label {
    float: left;
    margin: 10px 0 0 -20%;
    color: #4d4d4d;
    opacity: 0.5;
    font-size: 20px;
    word-spacing: 1.5px;
}

#personal-not-main .background {
    float: left;
    margin: 0 0 -5px 0;
}

#biography {
    margin: 10px 10px 10px 10px;
    float: right;
    right: 0;
    text-decoration: none;
}

#biography a span {
    float: right;
    padding-right: 90px;
    z-index: 10;
    color: #000000;
}

#biography a span img {
}

